--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
-* {
+ * {
   padding: 0;
   margin: 0;
 }
@@ -26,7 +26,11 @@ body {
   background-attachment: fixed; 
   margin: 0;
   font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ",
-    Meiryo, "ＭＳ Ｐゴシック", sans-serif;
+    Meiryo, "ＭＳ Ｐゴシック", sans-serif, 'Noto Sans JP';
+}
+h1, h2, h3 {
+  font-family: 'Bebas Neue', sans-serif;
+  letter-spacing: 1px;
 }
 header {
   background-color: rgba(1, 13, 17, 0.5);
@@ -35,7 +39,11 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: absolute;  
+  position: absolute;
+  top: 0;        
+  left: 0;       
+  width: 100%;   
+  
 }
 .overlay-image {
   position: absolute;
@@ -59,6 +67,7 @@ header ul {
   margin-left: 915px;
 }
 header li {
+  font-size: larger;
   list-style: none;
   margin-right: 40px;
 }
@@ -72,4 +81,10 @@ footer {
   align-items: center;
   position: fixed;
   justify-content: flex-end;
+}
+main {
+  padding-top: 80px; 
+}
+main li{
+  color: antiquewhite;
 }
