--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -4,7 +4,7 @@
   border: solid #d3def1;
   border-radius: 10px;
   text-align: center;
-  background-color: #000308;
+  background-color: #123f8c;
 }
 .title {
   font-size: 32px;
