--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <link rel="apple-touch-icon" href="/icon.png">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -22,8 +24,11 @@
       <h1>THE PALETTE STREET</h1>
       <div class="header-list">
       <ul>
-        <li><%= link_to "トップ", tweets_path %></li>
-        <li><%= link_to "新規投稿へ",tweets_path %></li>
+        <li><%= link_to "トップに戻る", home_path %></li>
+        <% if user_signed_in? && current_user.admin? %>
+          <li><%= link_to "新規投稿へ", new_tweet_path %></li>
+        <% end %>
+
       </ul>
       </div>
     </header>
