--- a/app/views/admin/menu.html.erb
+++ b/app/views/admin/menu.html.erb
@@ -5,5 +5,5 @@
   <li><%= link_to "新規投稿", new_tweet_path %></li>
   <li><%= link_to "ライブ情報一覧", lives_path %></li>
   <li><%= link_to "トップページへ戻る", root_path %></li>
-  <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+  <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
 </ul>
