--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="<%= controller.controller_name %>-<%= controller.action_name %>">
     <header>
       <h1>THE PALETTE STREET</h1>
       <div class="header-list">
@@ -40,3 +40,4 @@
     </footer>
   </body>
 </html>
+
