--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -38,7 +38,7 @@
       <ul class="tag-list">
         <% Tag.all.each do |t| %>
           <li>
-            <%= check_box :tag_ids, t.name %>
+            <%= check_box "tag_ids[]", t.name %>
             <%= t.name %>
           </li>
         <% end %>
