--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,25 +15,25 @@
 
   <div class="member-list">
     <div class="member">
-      <%= image_tag "IMG_3163.jpg", alt="member1" %>
+      <%= image_tag("IMG_3163.jpg", alt: "member1") %>
       <h3>けん</h3>
       <p>担当：ギター</p>
     </div>
 
     <div class="member">
-      <%= image_tag "IMG_3165.jpg", alt="member2" %>
+      <%= image_tag("IMG_3165.jpg", alt: "member2") %>
       <h3>れいと</h3>
       <p>担当：キーボード</p>
     </div>
 
     <div class="member">
-      <%= image_tag "IMG_3164.jpg", alt="member3" %>
+      <%= image_tag("IMG_3164.jpg", alt: "member3") %>
       <h3>かずき</h3>
       <p>担当：ベース</p>
     </div>
 
     <div class="member">
-      <%= image_tag "IMG_3162.jpg", alt="member4" %>
+      <%= image_tag("IMG_3162.jpg", alt: "member4") %>
       <h3>しゅん</h3>
       <p>担当：ドラム</p>
     </div>
