--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,7 +66,7 @@
     <% if user_signed_in? && current_user.admin? %>
       <%= link_to "新規投稿", new_tweet_path %>
       <%= link_to "マイページ", user_path(current_user.id) %>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
     <% end %>
 
   </div>
