--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="layout">
   <nav class="sidebar">
-    <%= link_to "曲一覧へ", tweets_path %>
+    <%= link_to "曲一覧", tweets_path %>
     <%= link_to "ライブ情報", lives_path %>
   </nav>
 
