--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,26 +16,34 @@
   <div class="member-list">
     <div class="member">
       <%= image_tag("IMG_3163.jpg", alt: "member1") %>
-      <h3>けん</h3>
-      <p>担当：ギター</p>
+      <div class="name-member">
+        <h3>ケンワタナベ</h3>
+      </div>
+        <p>Vo./Gt.</p>
     </div>
 
     <div class="member">
       <%= image_tag("IMG_3165.jpg", alt: "member2") %>
-      <h3>れいと</h3>
-      <p>担当：キーボード</p>
+      <div class="name-member">
+        <h3>れーと</h3>
+      </div>
+      <p>Key./Cho.</p>
     </div>
 
     <div class="member">
       <%= image_tag("IMG_3164.jpg", alt: "member3") %>
-      <h3>かずき</h3>
-      <p>担当：ベース</p>
+      <div class="name-member">
+        <h3>Kazuki</h3>
+      </div>
+      <p>Ba.</p>
     </div>
 
     <div class="member">
       <%= image_tag("IMG_3162.jpg", alt: "member4") %>
-      <h3>しゅん</h3>
-      <p>担当：ドラム</p>
+      <div class="name-member">
+        <h3>しゅんたろう</h3>
+      </div>
+      <p>Dr./Cho.</p>
     </div>
   </div>
 </section>
