--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -43,7 +43,6 @@
   margin: 10px auto;
 }
 h3 {
-  width: 100px;
   margin: 30px auto;
   text-align: center;
 }
@@ -89,6 +88,9 @@ h3 {
   height: 300px;
   object-fit: cover;
   border-radius: 8px;
+}
+.name-meber {
+  white-space: nowrap;
 }
 .sns-links {
   margin-top: 80px;
